@@ -122,6 +122,7 @@ function(series,
 
          median.show = TRUE,
          median.col = grey(.4),
+         warn.fan1 = TRUE,
          ...
 
 
@@ -261,7 +262,8 @@ function(series,
              ## initial.value = 1,
              median.show = median.show,
              median.col = median.col,
-             ...)
+             ...,
+             warn.fan1 = warn.fan1)
 
     } else if (series.type == "quantile") {
 
@@ -557,9 +559,10 @@ function(series,
                  log.scale = FALSE,
                  median.show = TRUE,
                  median.col = grey(.4),
-                 ...) {
+                 ...,
+                 warn.fan1) {
 
-    if (is.null(dim) || ncol(P) == 1L)
+    if (warn.fan1 && is.null(dim) || ncol(P) == 1L)
         warning("a single series makes a slim fan")
     nt <- nrow(P)
     if (!is.null(probs)) {
