@@ -213,7 +213,13 @@ plotseries(x, t, series.type = "quantile",
            probs = c(0.1, 0.25, 0.5, 0.75, 0.9))
 @
 
+\section*{BISdata}
 
+
+<<bis-rates-data>>=
+library("BISdata")
+BISdata::datasets()
+@ 
 
 \bibliographystyle{plainnat}
 \bibliography{plotseries}
