@@ -1,3 +1,11 @@
+2024-05-06  Enrico Schumann  <es@enricoschumann.net>
+
+        * R/plotseries.R (plotseries.default): add argument
+        "warn.fan1"; if TRUE, warn when a fanplot is to be
+        computed from a single series (the warning had always
+        been issued, and the new argument provides a way to
+        suppress it)
+
 2024-02-23  Enrico Schumann  <es@enricoschumann.net>
 
         * R/plotseries.R (.quantile, .fan): add labels to
